<resources>
    <string name="app_name">bwa_mov</string>
    <string name="onboard_action_skip">Lewati Perkenalan</string>
    <string name="onboard_action_next">Lanjutkan</string>
    <string name="onboard_playing_title">Now Playing</string>
    <string name="onboard_playing_subtitle">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="onboard_presale_title">Pre Sale</string>
    <string name="onboard_presale_subtitle">Tidak perlu khawatir ketinggalan update film terbaru</string>
    <string name="onboard_cashless_title">Cashless</string>
    <string name="onboard_cashless_subtitle">Gunakan e-wallet untuk transaksi tiket nonton</string>
    <string name="onboard_action_done">Mulai Sekarang</string>
    <string name="signin">Sign In</string>
    <string name="field_username">Username</string>
    <string name="field_password">Password</string>
    <string name="signin_action_signin">Masuk Akun</string>
    <string name="signin_action_signup">Daftar Akun Baru</string>
    <string name="signup">Sign Up</string>
    <string name="signup_action_next">Lanjutkan</string>
    <string name="field_name">Nama</string>
    <string name="field_email">Alamat Email</string>
    <string name="photo">Photo</string>
    <string name="signup_welcome">Welcome,</string>
    <string name="signup_action_cancel_upload">Upload Nanti</string>
    <string name="signup_action_save">Simpan Lanjutkan</string>
    <string name="home_playing_title">Now Playing</string>
    <string name="home_coming_title">Coming Soon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_storyboard">Storyboard</string>
    <string name="movie_actor">Who\'s Playing</string>
    <string name="movie_action_selecting_seat">Pilih Bangku</string>
    <string name="checkout_title">Pilih Bangku</string>
    <string name="checkout_movie_screen">LAYAR BIOSKOP</string>
    <string name="checkout_action_buy">Beli Tiket</string>
    <string name="checkout_preview_title">Checkout</string>
    <string name="preview_time">When</string>
    <string name="preview_seat">Seats</string>
    <string name="preview_wallet">E-Wallet</string>
    <string name="preview_action_buy">BAYAR SEKARANG</string>
    <string name="preview_action_cancel">BATALKAN</string>
    <string name="preview_saldo_lessbalance">Saldo pada e-wallet anda tidak mencukupi untuk melakukan transaksi</string>
    <string name="checkout_finish_title">Happy Watching!</string>
    <string name="checkout_finish_subtitle">Tiket telah berhasil dibeli, selamat menikmati film.</string>
    <string name="checkout_finish_check_ticket">Lihat Tiket</string>
    <string name="checkout_finish_go_home">Home</string>
    <string name="ticket_history_title">History</string>
    <string name="profile_wallet">My Wallet</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="profile_language">Change Language</string>
    <string name="profile_help">Help</string>
    <string name="edit_save">Simpan</string>
    <string name="wallet_amount_label">Saldo Tersedia</string>
    <string name="wallet_history">Daftar Transaksi</string>
    <string name="profile_signout">Keluar</string>
    <string name="wallet_topup_now">Topup Sekarang</string>
    <string name="topup_title">Topup</string>
    <string name="topup_custom">Topup Sesukamu</string>
    <string name="topup_options">Topup Pilihan</string>
</resources>
