<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SplashActivity" android:background="@color/colorAppBase">
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" app:srcCompat="@drawable/now_playing"
            android:id="@+id/imageView2" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="100dp"/>
    <Button
            android:text="@string/onboard_action_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_next"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:background="@drawable/button_rounded_primary" android:textColor="#FFFFFF"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_skip"/>
    <Button
            android:text="@string/onboard_action_skip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_skip"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginBottom="50dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:background="@drawable/button_rounded_secondary" android:textColor="#FFFFFF"/>
    <TextView
            android:text="@string/onboard_playing_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginTop="100dp" android:textColor="#FFFFFF"
            android:gravity="center" android:textSize="24sp" android:textStyle="bold"/>
    <TextView
            android:text="@string/onboard_playing_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:textColor="@color/colorAppAccent" android:gravity="center" android:textSize="20sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>