<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SplashActivity" android:background="@color/colorAppBase">
    <Button
            android:text="@string/signin_action_signin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signin"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:background="@drawable/button_rounded_primary" android:textColor="#FFFFFF"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="20dp" app:layout_constraintBottom_toTopOf="@+id/btn_signup"/>
    <Button
            android:text="@string/signin_action_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signup"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginBottom="50dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:background="@drawable/button_rounded_secondary" android:textColor="#FFFFFF"/>
    <ImageView
            android:src="@drawable/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp" app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:text="@string/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_ticket_day"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginTop="50dp" android:textColor="#FFFFFF"
            android:textStyle="bold" android:textSize="24sp"/>
    <TextView
            android:text="@string/field_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_saldo" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_ticket_day" android:textSize="16sp"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorAppAccent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            tools:text="Name"
            android:ems="10"
            android:id="@+id/field_username" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_saldo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:backgroundTint="@color/colorAppAccent"
            android:textColor="#FFFFFF" android:textSize="16sp" android:textStyle="bold"/>
    <TextView
            android:text="@string/field_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textSize="16sp"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorAppAccent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/field_username"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:text="Name"
            android:ems="10"
            android:id="@+id/field_password"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:backgroundTint="@color/colorAppAccent"
            android:textColor="#FFFFFF" android:textSize="16sp" android:textStyle="bold"/>
</androidx.constraintlayout.widget.ConstraintLayout>