<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SplashActivity" android:background="@color/colorAppBase">
    <Button
            android:text="@string/signup_action_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_next"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:background="@drawable/button_rounded_primary" android:textColor="#FFFFFF"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="50dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:textColor="#FFFFFF"
            android:textStyle="bold" android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" android:gravity="center"/>
    <TextView
            android:text="@string/field_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_ticket_day"
            android:textSize="16sp"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorAppAccent" app:layout_constraintTop_toBottomOf="@+id/tv_title"
            android:layout_marginTop="75dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            tools:text="addincendekia"
            android:ems="10"
            android:id="@+id/field_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_ticket_day" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:backgroundTint="@color/colorAppAccent"
            android:textColor="#FFFFFF" android:textSize="16sp" android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/field_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_password"
            android:textSize="16sp"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorAppAccent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/field_username"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:text="addincendekia"
            android:ems="10"
            android:id="@+id/field_password"
            app:layout_constraintTop_toBottomOf="@+id/tv_password" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:backgroundTint="@color/colorAppAccent"
            android:textColor="#FFFFFF" android:textSize="16sp" android:textStyle="bold"/>
    <TextView
            android:text="@string/field_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textSize="16sp"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorAppAccent" app:layout_constraintTop_toBottomOf="@+id/field_password"
            android:layout_marginTop="20dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            tools:text="Addin Cendekia"
            android:ems="10"
            android:id="@+id/field_nama"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:backgroundTint="@color/colorAppAccent"
            android:textColor="#FFFFFF" android:textSize="16sp" android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/textView6"
    />
    <TextView
            android:text="@string/field_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_email"
            android:textSize="16sp"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorAppAccent"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/field_nama"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            tools:text="addincendekia@gmail.com"
            android:ems="10"
            android:id="@+id/field_email"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:backgroundTint="@color/colorAppAccent"
            android:textColor="#FFFFFF" android:textSize="16sp" android:textStyle="bold"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"/>
    <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp" app:srcCompat="@drawable/ic_keyboard_backspace_white_24dp"
            android:id="@+id/btn_back"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginTop="32dp"
            android:clickable="true"/>
</androidx.constraintlayout.widget.ConstraintLayout>