<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SplashActivity" android:background="@color/colorAppBase">
    <Button
            android:text="@string/signup_action_cancel_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signup_skip"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:background="@drawable/button_rounded_secondary" android:textColor="#FFFFFF"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="130dp"
                android:layout_marginTop="280dp"
                android:layout_marginEnd="130dp"
                android:src="@drawable/logo"
                app:srcCompat="@drawable/avatar_noimage" />

        <Button
                android:id="@+id/btn_add_photo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignRight="@+id/iv_avatar"
                android:layout_alignBottom="@+id/iv_avatar"
                android:background="@drawable/button_circle_info"
                android:drawableTop="@drawable/ic_add_white_24dp"
                tools:ignore="NotSibling"
                tools:layout_editor_absoluteX="281dp"
                tools:layout_editor_absoluteY="415dp" />
    </RelativeLayout>

    <Button
            android:text="@string/signup_action_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signup_next"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:background="@drawable/button_rounded_primary" android:textColor="#FFFFFF"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="20dp" app:layout_constraintBottom_toTopOf="@+id/btn_signup_skip"
            android:visibility="invisible"/>
    <TextView
            android:text="@string/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_ticket_day"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:textColor="#FFFFFF"
            android:textStyle="bold" android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" android:gravity="center"/>
    <TextView
            android:text="@string/signup_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_signup_welcome"
            android:textSize="24sp"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
            android:textColor="#FFFFFF" app:layout_constraintTop_toBottomOf="@+id/tv_ticket_day"
            android:layout_marginTop="75dp" android:textStyle="bold"/>
    <TextView
            tools:text="Addin Cendekia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_signup_username"
            android:textSize="24sp"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
            android:textColor="#FFFFFF"
            android:textStyle="bold" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup_welcome"/>
    <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp" app:srcCompat="@drawable/ic_keyboard_backspace_white_24dp"
            android:id="@+id/btn_signup_back"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginTop="32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>